--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,34 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="#fff">
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/dp10"
+        android:background="#fff"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
         <ImageView
-            android:layout_marginLeft="5dp"
             android:id="@+id/iv_home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
+            android:layout_marginLeft="5dp"
             android:src="@mipmap/home_address_ico_black" />
 
         <TextView
             android:id="@+id/tv_home_loc_title"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
+            android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/iv_home"
+            android:gravity="center_vertical"
             android:text="长春"
             android:textColor="@color/textBlack"
             android:textSize="14sp" />
 
-    </RelativeLayout>
+        <LinearLayout
+            android:id="@+id/ll_sousuo_serch"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dp10"
+            android:layout_weight="1"
+            android:background="@drawable/bg_blue"
+            android:padding="5dp">
+
+            <ImageView
+                android:layout_width="12dp"
+                android:layout_height="12dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="5dp"
+                android:src="@mipmap/steward_capital_search" />
+
+            <TextView
+                android:id="@+id/tv_play_serch"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:background="@null"
+                android:gravity="center|left"
+                android:hint="请输入搜索关键字"
+                android:textColor="@color/textBlack"
+                android:textColorHint="@color/textLightGray"
+                android:textCursorDrawable="@drawable/color_cursor"
+                android:textSize="14sp" />
+        </LinearLayout>
+    </LinearLayout>
 
     <View
         android:layout_width="match_parent"
@@ -40,9 +71,9 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <com.youth.banner.Banner
                 android:id="@+id/banner"
@@ -252,49 +283,46 @@
 
             <!--一建优速-->
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
                 <LinearLayout
-                    android:background="@color/home_read"
                     android:layout_width="100dp"
-                    android:layout_height="180dp">
-                </LinearLayout>
+                    android:layout_height="180dp"
+                    android:background="@color/home_read"></LinearLayout>
 
                 <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_marginLeft="10dp"
                     android:layout_width="match_parent"
-                    android:layout_height="180dp">
+                    android:layout_height="180dp"
+                    android:layout_marginLeft="10dp"
+                    android:orientation="vertical">
 
                     <LinearLayout
-                        android:background="@color/home_read"
                         android:layout_width="match_parent"
+                        android:layout_height="0dp"
                         android:layout_weight="1"
-                        android:layout_height="0dp">
-                    </LinearLayout>
+                        android:background="@color/home_read"></LinearLayout>
 
                     <LinearLayout
-                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
                         android:layout_marginTop="10dp"
-                        android:layout_width="match_parent"
                         android:layout_weight="1"
-                        android:layout_height="0dp">
+                        android:orientation="horizontal">
 
                         <LinearLayout
-                            android:background="@color/home_read"
                             android:layout_width="0dp"
+                            android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:layout_height="match_parent">
-                        </LinearLayout>
+                            android:background="@color/home_read"></LinearLayout>
+
                         <LinearLayout
-                            android:layout_marginLeft="10dp"
-                            android:background="@color/home_read"
                             android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="10dp"
                             android:layout_weight="1"
-                            android:layout_height="match_parent">
-                        </LinearLayout>
+                            android:background="@color/home_read"></LinearLayout>
 
                     </LinearLayout>
 
@@ -304,31 +332,33 @@
 
             <!--推荐商家-->
             <LinearLayout
-                android:gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="@color/white">
+                android:background="@color/white"
+                android:gravity="center">
 
                 <View
-                    android:background="@color/textBlack"
                     android:layout_width="20dp"
-                    android:layout_height="1dp"/>
+                    android:layout_height="1dp"
+                    android:background="@color/textBlack" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:paddingBottom="10dp"
-                    android:paddingTop="10dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
+                    android:paddingBottom="10dp"
+                    android:paddingTop="10dp"
                     android:text="推荐商家"
                     android:textColor="@color/textBlack"
                     android:textSize="16sp" />
+
                 <View
-                    android:background="@color/textBlack"
                     android:layout_width="20dp"
-                    android:layout_height="1dp"/>
+                    android:layout_height="1dp"
+                    android:background="@color/textBlack" />
 
             </LinearLayout>
 
@@ -358,11 +388,12 @@
                     android:layout_centerVertical="true"
                     android:layout_marginRight="15dp"
                     android:gravity="center_vertical"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:baselineAligned="false"
                         android:text="更多"
                         android:textColor="@color/white"
                         android:textSize="15sp" />
@@ -392,34 +423,35 @@
             </LinearLayout>
 
 
-
             <!--加载更多-->
             <LinearLayout
-                android:gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="@color/white">
+                android:background="@color/white"
+                android:gravity="center">
 
                 <View
-                    android:background="@color/textBlack"
                     android:layout_width="20dp"
-                    android:layout_height="1dp"/>
+                    android:layout_height="1dp"
+                    android:background="@color/textBlack" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:paddingBottom="10dp"
-                    android:paddingTop="10dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
+                    android:paddingBottom="10dp"
+                    android:paddingTop="10dp"
                     android:text="加载更多"
                     android:textColor="@color/textBlack"
                     android:textSize="16sp" />
+
                 <View
-                    android:background="@color/textBlack"
                     android:layout_width="20dp"
-                    android:layout_height="1dp"/>
+                    android:layout_height="1dp"
+                    android:background="@color/textBlack" />
 
             </LinearLayout>
 
@@ -482,11 +514,8 @@
             </LinearLayout>
 
 
-
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
-
-
 
 
 </LinearLayout>
