--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -29,8 +29,7 @@
                     android:id="@+id/rl_my_header"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/home_read"
-                    >
+                    android:background="@color/home_read">
 
                     <com.xingguang.localrun.view.RoundImageView
                         android:id="@+id/my_user_img"
@@ -40,17 +39,16 @@
                         android:scaleType="centerCrop"
                         android:src="@mipmap/defaultavatar123" />
 
-
                     <TextView
                         android:id="@+id/my_user_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="12dp"
                         android:layout_below="@+id/my_user_img"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="12dp"
                         android:text="未登录"
                         android:textColor="@color/white"
-                        android:textSize="16sp"
-                        android:layout_centerHorizontal="true" />
+                        android:textSize="16sp" />
                 </RelativeLayout>
 
 
