--- a/app/src/main/res/layout/item_lvright.xml
+++ b/app/src/main/res/layout/item_lvright.xml
@@ -1,24 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
+    android:orientation="vertical"
     android:padding="@dimen/dp6">
 
-    <ImageView
-        android:id="@+id/imageItem"
-        android:layout_width="@dimen/dp50"
-        android:layout_height="@dimen/dp50"
-        android:scaleType="fitXY"
-        android:src="@drawable/home_icon"/>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/imageItem"
+            android:layout_width="@dimen/dp50"
+            android:layout_height="@dimen/dp50"
+            android:scaleType="fitXY"
+            android:src="@drawable/home_icon"/>
 
-    <TextView
-        android:text="香酥蛋卷店"
-        android:id="@+id/textItem"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/dp50"
-        android:gravity="center_vertical"
-        android:paddingLeft="@dimen/dp6"
-        android:layout_toRightOf="@+id/imageItem"
-        android:textColor="@color/textBlack" />
-</RelativeLayout>
+        <TextView
+            android:text="香酥蛋卷店"
+            android:id="@+id/textItem"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp50"
+            android:gravity="center_vertical"
+            android:paddingLeft="@dimen/dp6"
+            android:layout_toRightOf="@+id/imageItem"
+            android:textColor="@color/textBlack" />
+
+        <TextView
+            android:id="@+id/item_tv_inshop"
+            android:layout_marginRight="@dimen/dp10"
+            android:layout_marginLeft="@dimen/dp10"
+            android:paddingBottom="2dp"
+            android:paddingRight="@dimen/dp10"
+            android:paddingLeft="@dimen/dp10"
+            android:background="@drawable/bg_red"
+            android:textSize="13sp"
+            android:textColor="@color/white"
+            android:text="进店"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:background="@color/home_read"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="120dp" />
+
+        <ImageView
+            android:layout_marginLeft="@dimen/dp10"
+            android:background="@color/home_read"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="120dp" />
+
+    </LinearLayout>
+
+
+</LinearLayout>
