--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#81daef</color>
     <color name="colorAccent">#ff3838</color>
 
+    <color name="theme_color">#81daef</color>
 
     <color name="home_read">#ff0000</color>
     <!-- 文字颜色  红色 -->
@@ -34,6 +35,15 @@
     <color name="bg_color">#f5f5f5</color>
     <!--背景色-->
     <color name="board">#efeff4</color>
+    <!-- 透明背景 黑色 -->
+    <color name="black_trans">#881f1f1f</color>
+    <!-- 标题颜色 深色文字 -->
+    <color name="title_color">#1f1f1f</color>
+    <!-- 提示文字颜色  浅灰文字 -->
+    <color name="hint_color">#a9a9a9</color>
+    <!-- 提示文字颜色  中灰文字 -->
+    <color name="hint_middle_color">#6c6c6c</color>
+
 
 
 </resources>
