--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,5 +23,10 @@
         </attr>
     </declare-styleable>
 
+    <!--自定义edittext的样式-->
+    <style name="MyEditText" parent="Theme.AppCompat.Light">
+        <item name="colorControlNormal">@color/home_read</item>
+        <item name="colorControlActivated">@color/home_read</item>
+    </style>
 
 </resources>
