--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -62,13 +62,22 @@
 
         <!--密码-->
         <LinearLayout
+            android:layout_marginTop="@dimen/dp10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="13dp"
             android:layout_marginRight="13dp"
-            android:layout_marginTop="@dimen/dp10"
+            android:background="@color/white"
             android:gravity="center_vertical"
             android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:text="密    码"
+                android:textColor="@color/textBlack"
+                android:textSize="14sp" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -78,17 +87,17 @@
                     android:id="@+id/login_pwd"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/outside_margin"
+                    android:layout_marginLeft="@dimen/dp10"
+                    android:background="@null"
                     android:gravity="left"
-                    android:hint="密 码"
                     android:inputType="textPassword"
                     android:lines="1"
+                    android:maxLines="11"
                     android:padding="@dimen/outside_margin"
                     android:textColor="@color/title_color"
                     android:textColorHint="@color/hint_color"
                     android:textCursorDrawable="@drawable/color_cursor"
-                    android:textSize="14sp"
-                    android:theme="@style/MyEditText" />
+                    android:textSize="14sp" />
             </RelativeLayout>
         </LinearLayout>
 
