--- a/app/src/main/res/layout/fragment_classif.xml
+++ b/app/src/main/res/layout/fragment_classif.xml
@@ -5,6 +5,13 @@
     android:background="@color/white"
     android:orientation="vertical">
 
+    <!--设置沉浸式状态栏，填充布局-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/home_bule"
+        android:paddingTop="@dimen/padding_top">
+    </LinearLayout>
 
     <include layout="@layout/toolbar_layout" />
 
