--- a/app/src/main/res/layout/item_home_daiban.xml
+++ b/app/src/main/res/layout/item_home_daiban.xml
@@ -2,26 +2,99 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/white"
+    android:layout_marginTop="8dp"
     android:orientation="vertical">
 
-    <TextView
-        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-        android:id="@+id/item_tv_name"
+    <RelativeLayout
+        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:text="新竹-汽贸城"
-        android:textColor="@color/textBlack"
-        android:textSize="16sp" />
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:layout_marginLeft="10dp"
+            android:id="@+id/item_ivdaiban"
+            android:src="@mipmap/home_laba"
+            android:layout_width="20dp"
+            android:layout_height="20dp" />
+        <TextView
+            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+            android:id="@+id/item_tv_name"
+            android:layout_width="wrap_content"
+            android:layout_toRightOf="@+id/item_ivdaiban"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:text="新竹-汽贸城"
+            android:textColor="@color/textBlack"
+            android:textSize="16sp" />
+
+        <TextView
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_alignParentRight="true"
+            android:id="@+id/item_tv_lianxi"
+            android:paddingBottom="2dp"
+            android:paddingRight="@dimen/dp10"
+            android:paddingLeft="@dimen/dp10"
+            android:background="@drawable/bg_home_blue"
+            android:textSize="13sp"
+            android:textColor="@color/white"
+            android:text="一键联系"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
+
 
     <TextView
         android:layout_margin="@dimen/dp10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="新竹 新星宇和懿10号楼1106室"
+        android:text="新竹 新星宇和懿10号楼1106室新星宇和懿10号楼11懿10号楼1106室"
         android:textColor="@color/textBlack"
         android:textSize="14sp" />
+
+    <LinearLayout
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="8dp"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:gravity="center"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content">
+            <TextView
+                android:paddingBottom="2dp"
+                android:paddingRight="@dimen/dp10"
+                android:paddingLeft="@dimen/dp10"
+                android:background="@drawable/bg_blue"
+                android:textSize="13sp"
+                android:textColor="@color/home_bule"
+                android:text="10号上午9点"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:gravity="center"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content">
+        <TextView
+            android:paddingBottom="2dp"
+            android:paddingRight="@dimen/dp10"
+            android:paddingLeft="@dimen/dp10"
+            android:background="@drawable/bg_white_red"
+            android:textSize="13sp"
+            android:textColor="@color/home_read"
+            android:text="10号上午2点"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        </LinearLayout>
+    </LinearLayout>
 
 
 </LinearLayout>
