--- a/app/src/main/res/layout/item_home_daigou.xml
+++ b/app/src/main/res/layout/item_home_daigou.xml
@@ -1,61 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
-
-    <ImageView
-        android:background="@color/textBlack"
-        android:scaleType="centerCrop"
-        android:id="@+id/item_ivds_bg"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
-        android:layout_width="match_parent"
-        android:layout_height="120dp" />
-
-    <TextView
-        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-        android:id="@+id/item_tv_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:text="可可美心蛋糕"
-        android:textColor="@color/textBlack"
-        android:textSize="16sp" />
+    android:layout_marginBottom="6dp"
+    android:layout_marginTop="6dp"
+    android:orientation="vertical"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:orientation="vertical"
+        android:padding="5dp">
+
+        <ImageView
+            android:id="@+id/item_ivds_bg"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:background="@color/textBlack"
+            android:scaleType="centerCrop" />
 
         <TextView
-            android:layout_marginRight="@dimen/dp10"
-            android:layout_marginLeft="10dp"
-            android:id="@+id/tvpm_money"
-            android:layout_width="wrap_content"
+            android:id="@+id/item_tv_name"
+            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="￥322"
-            android:textColor="@color/textMoney"
-            android:textSize="14sp" />
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:text="可可美心蛋糕"
+            android:textColor="@color/textBlack"
+            android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/item_tv_look"
-            android:paddingBottom="2dp"
-            android:paddingRight="@dimen/dp10"
-            android:paddingLeft="@dimen/dp10"
-            android:background="@drawable/bg_red"
-            android:textSize="13sp"
-            android:textColor="@color/white"
-            android:text="查看店铺"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:orientation="horizontal">
 
+            <TextView
+                android:id="@+id/tvpm_money"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="@dimen/dp10"
+                android:text="¥322元"
+                android:textColor="@color/textMoney"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/item_tv_look"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_red"
+                android:paddingBottom="2dp"
+                android:paddingLeft="@dimen/dp10"
+                android:paddingRight="@dimen/dp10"
+                android:text="查看店铺"
+                android:textColor="@color/white"
+                android:textSize="13sp" />
+
+        </LinearLayout>
     </LinearLayout>
 
 
-
-
-</LinearLayout>
+</RelativeLayout>
