--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,8 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <dimen name="padding_top">0dp</dimen>
+
     <dimen name="item_margin">8dp</dimen>
     <dimen name="item_margin_larger">15dp</dimen>
 
