--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -14,54 +14,82 @@
         android:background="@color/home_read"
         android:paddingTop="@dimen/padding_top"/>
 
-    <android.support.v4.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:scrollbars="none">
 
-        <LinearLayout
+
+    <android.support.design.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/AppFragment_AppBarLayout"
+            android:layout_width="match_parent"
+            android:layout_height="180dp"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+            <android.support.design.widget.CollapsingToolbarLayout
+                android:id="@+id/AppFragment_CollapsingToolbarLayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+                <RelativeLayout
+                    android:id="@+id/rl_my_header"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/home_read">
+
+                    <com.xingguang.localrun.view.RoundImageView
+                        android:id="@+id/my_user_img"
+                        android:layout_width="57dp"
+                        android:layout_height="57dp"
+                        android:layout_centerInParent="true"
+                        android:scaleType="centerCrop"
+                        android:src="@mipmap/defaultavatar123" />
+
+                    <TextView
+                        android:id="@+id/my_user_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/my_user_img"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="12dp"
+                        android:text="未登录"
+                        android:textColor="@color/white"
+                        android:textSize="16sp" />
+                </RelativeLayout>
+
+
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/AppFragment_Toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:background="@color/colorPrimary"
+                    app:layout_collapseMode="pin">
+
+                    <TextView
+                        android:id="@+id/my_tv_setting"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:gravity="left"
+                        android:paddingTop="10dp"
+                        android:text="设置"
+                        android:textColor="@android:color/white"
+                        android:textSize="16sp" />
+                </android.support.v7.widget.Toolbar>
+
+            </android.support.design.widget.CollapsingToolbarLayout>
+
+        </android.support.design.widget.AppBarLayout>
+
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <RelativeLayout
-                android:id="@+id/rl_my_header"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/home_read">
-
-                <TextView
-                    android:layout_marginLeft="@dimen/dp10"
-                    android:layout_width="wrap_content"
-                    android:layout_height="30dp"
-                    android:gravity="left|center"
-                    android:text="设置"
-                    android:textColor="@android:color/white"
-                    android:textSize="16sp" />
-
-                <com.xingguang.localrun.view.RoundImageView
-                    android:id="@+id/my_user_img"
-                    android:layout_width="57dp"
-                    android:layout_height="57dp"
-                    android:layout_centerInParent="true"
-                    android:scaleType="centerCrop"
-                    android:src="@mipmap/defaultavatar123" />
-
-                <TextView
-                    android:id="@+id/my_user_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/my_user_img"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginBottom="@dimen/dp10"
-                    android:layout_marginTop="40dp"
-                    android:text="未登录"
-                    android:textColor="@color/white"
-                    android:textSize="16sp" />
-            </RelativeLayout>
+            android:background="@android:color/white"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:scrollbars="none"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -69,11 +97,77 @@
                 android:orientation="vertical">
 
                 <include layout="@layout/layout_mine_bottom" />
-            </LinearLayout>
-        </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
 
-    <!--</android.support.design.widget.CoordinatorLayout>-->
+
+            </LinearLayout>
+        </android.support.v4.widget.NestedScrollView>
+
+    </android.support.design.widget.CoordinatorLayout>
+
+
+
+
+
+
+    <!--<android.support.v4.widget.NestedScrollView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="@android:color/white"-->
+        <!--android:focusable="true"-->
+        <!--android:focusableInTouchMode="true"-->
+        <!--android:scrollbars="none">-->
+
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:orientation="vertical">-->
+
+            <!--<RelativeLayout-->
+                <!--android:id="@+id/rl_my_header"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:background="@color/home_read">-->
+
+                <!--<TextView-->
+                    <!--android:layout_marginLeft="@dimen/dp10"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="30dp"-->
+                    <!--android:gravity="left|center"-->
+                    <!--android:text="设置"-->
+                    <!--android:textColor="@android:color/white"-->
+                    <!--android:textSize="16sp" />-->
+
+                <!--<com.xingguang.localrun.view.RoundImageView-->
+                    <!--android:id="@+id/my_user_img"-->
+                    <!--android:layout_width="57dp"-->
+                    <!--android:layout_height="57dp"-->
+                    <!--android:layout_centerInParent="true"-->
+                    <!--android:scaleType="centerCrop"-->
+                    <!--android:src="@mipmap/defaultavatar123" />-->
+
+                <!--<TextView-->
+                    <!--android:id="@+id/my_user_name"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_below="@+id/my_user_img"-->
+                    <!--android:layout_centerHorizontal="true"-->
+                    <!--android:layout_marginBottom="@dimen/dp10"-->
+                    <!--android:layout_marginTop="40dp"-->
+                    <!--android:text="未登录"-->
+                    <!--android:textColor="@color/white"-->
+                    <!--android:textSize="16sp" />-->
+            <!--</RelativeLayout>-->
+
+            <!--<LinearLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:orientation="vertical">-->
+
+                <!--<include layout="@layout/layout_mine_bottom" />-->
+            <!--</LinearLayout>-->
+        <!--</LinearLayout>-->
+    <!--</android.support.v4.widget.NestedScrollView>-->
+
 
 
 </LinearLayout>
