--- a/app/src/main/res/layout/activity_productdetails.xml
+++ b/app/src/main/res/layout/activity_productdetails.xml
@@ -8,9 +8,6 @@
     tools:context="com.xingguang.localrun.maincode.home.view.activity.ProductdetailsActivity">
 
 
-
-
-
     <com.xingguang.localrun.view.TiceScrollview
         android:id="@+id/sc_head_view"
         android:layout_width="match_parent"
@@ -127,6 +124,8 @@
                     android:orientation="vertical">
 
                     <WebView
+                        android:background="@color/white"
+                        android:orientation="vertical"
                         android:id="@+id/webView1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -140,7 +139,7 @@
                     android:layout_marginTop="10dp"
                     android:descendantFocusability="blocksDescendants">
 
-                    <com.moshu.phonelive.utils.MyListView
+                    <com.xingguang.localrun.utils.MyListView
                         android:id="@+id/rv_comment"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
@@ -178,23 +177,101 @@
 
 
     <!--底部功能按钮-->
-    <LinearLayout
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="45dp">
-
-        <Button
-            android:visibility="gone"
-            android:id="@+id/btn_mybaishi"
+        <LinearLayout
+            android:id="@+id/bottom"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:background="#e0FF8A00"
-            android:textColor="#ffffff"
-            android:textSize="14sp" />
-    </LinearLayout>
+            android:layout_height="42dp"
+            android:orientation="horizontal"
+            android:weightSum="4">
+
+            <LinearLayout
+                android:id="@+id/ll_shop"
+                android:paddingLeft="8dp"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:paddingBottom="5dp"
+                android:paddingTop="5dp">
+
+                <ImageView
+                    android:layout_width="19dp"
+                    android:layout_height="19dp"
+                    android:src="@mipmap/pro_shop" />
+
+                <TextView
+                    android:layout_marginLeft="5dp"
+                    android:gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="2dp"
+                    android:text="店铺"
+                    android:textColor="@color/textDarkGray"
+                    android:textSize="9sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/collect"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:gravity="center"
+                android:paddingRight="8dp"
+                android:orientation="horizontal"
+                android:paddingBottom="5dp"
+                android:paddingTop="5dp">
+
+                <ImageView
+                    android:id="@+id/collect_img"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@mipmap/pro_collection" />
+
+                <TextView
+                    android:layout_marginLeft="5dp"
+                    android:gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="2dp"
+                    android:text="收藏"
+                    android:textColor="@color/textDarkGray"
+                    android:textSize="9sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_weight="2"
+                android:layout_width="0dp"
+                android:layout_height="match_parent">
+                <TextView
+                    android:id="@+id/add_shopcar"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:background="@color/btn_addshopcar"
+                    android:gravity="center"
+                    android:text="加入购物车"
+                    android:textColor="@color/white"
+                    android:textSize="15sp" />
+                <TextView
+                    android:id="@+id/commit"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/text_color_red"
+                    android:gravity="center"
+                    android:text="立即购买"
+                    android:textColor="@color/white"
+                    android:textSize="15sp" />
+
+            </LinearLayout>
+        </LinearLayout>
 
 
 </RelativeLayout>
