--- a/app/src/main/res/layout/activity_address_management.xml
+++ b/app/src/main/res/layout/activity_address_management.xml
@@ -14,46 +14,65 @@
         android:layout_height="1dp"
         android:background="@color/line_color" />
 
-    <LinearLayout
-        android:id="@+id/main_fl"
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/scorl"
+        android:scrollbars="none"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:visibility="visible">
+        android:layout_height="match_parent">
 
-        <!--<com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout-->
-        <!--android:id="@+id/twinklingRefresh"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent">-->
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/address_management_recycle"
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/bottom"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginTop="25dp"
-            android:layout_marginLeft="@dimen/dp20"
-            android:layout_marginRight="@dimen/dp20"
-            android:background="@drawable/corners30_solidgreen"
-            android:gravity="center"
-            android:text="添加新地址"
-            android:textColor="#fff"
-            android:textSize="16sp" />
+            <LinearLayout
+                android:id="@+id/main_fl"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="visible">
 
-        <!--</com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>-->
-    </LinearLayout>
+                <!--<com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout-->
+                <!--android:id="@+id/twinklingRefresh"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent">-->
 
-    <ImageView
-        android:id="@+id/empty"
-        android:layout_width="150dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_horizontal"
-        android:src="@mipmap/ico_nodata"
-        android:visibility="gone" />
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/address_management_recycle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+
+                <!--</com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>-->
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/bottom"
+                android:visibility="visible"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginBottom="@dimen/dp30"
+                android:layout_marginLeft="@dimen/dp20"
+                android:layout_marginRight="@dimen/dp20"
+                android:background="@drawable/corners30_solidgreen"
+                android:gravity="center"
+                android:text="添加新地址"
+                android:textColor="#fff"
+                android:textSize="16sp" />
+
+            <ImageView
+                android:id="@+id/empty"
+                android:layout_width="150dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_horizontal"
+                android:src="@mipmap/ico_nodata"
+                android:visibility="gone" />
+
+        </LinearLayout>
+
+
+    </android.support.v4.widget.NestedScrollView>
 
 
 </LinearLayout>
