--- a/app/src/main/res/layout/activity_productdetails.xml
+++ b/app/src/main/res/layout/activity_productdetails.xml
@@ -90,6 +90,7 @@
                         android:textSize="15sp" />
 
                     <LinearLayout
+                        android:id="@+id/ll_guige"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
