--- a/app/src/main/res/layout/item_address_management.xml
+++ b/app/src/main/res/layout/item_address_management.xml
@@ -13,10 +13,10 @@
         android:layout_marginBottom="10dp"
         android:background="@color/white"
         android:orientation="vertical"
-        android:paddingLeft="15dp"
         android:paddingTop="15dp">
 
         <LinearLayout
+            android:paddingLeft="15dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
@@ -24,23 +24,27 @@
 
             <TextView
                 android:id="@+id/name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:text="姓名"
                 android:textColor="@color/textBlack"
                 android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/phone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:text="电话"
+                android:layout_marginRight="13dp"
                 android:textColor="@color/textBlack"
                 android:textSize="14sp" />
         </LinearLayout>
 
         <TextView
+            android:paddingLeft="15dp"
             android:id="@+id/address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -53,9 +57,10 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="10dp"
-            android:background="@color/line_color" />
+            android:background="@color/fengexian" />
 
         <RelativeLayout
+            android:paddingLeft="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -66,12 +71,12 @@
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
-                <!--<ImageView-->
-                    <!--android:id="@+id/default_address_img"-->
-                    <!--android:layout_width="35dp"-->
-                    <!--android:layout_height="35dp"-->
-                    <!--android:padding="9dp"-->
-                    <!--android:src="@drawable/nochoice_btn_gray" />-->
+                <ImageView
+                    android:id="@+id/default_address_img"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:padding="9dp"
+                    android:src="@mipmap/ic_uncheck" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -83,27 +88,37 @@
             </LinearLayout>
 
             <LinearLayout
+                android:layout_centerVertical="true"
+                android:layout_marginRight="13dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_gravity="center_vertical"
                 android:orientation="horizontal">
 
-                <!--<ImageView-->
-                    <!--android:id="@+id/update"-->
-                    <!--android:layout_width="35dp"-->
-                    <!--android:layout_height="35dp"-->
-                    <!--android:padding="9dp"-->
-                    <!--android:src="@mipmap/steward_edit_black" />-->
-
-                <!--<ImageView-->
-                    <!--android:id="@+id/detele"-->
-                    <!--android:layout_width="35dp"-->
-                    <!--android:layout_height="35dp"-->
-                    <!--android:layout_marginLeft="5dp"-->
-                    <!--android:layout_marginRight="5dp"-->
-                    <!--android:padding="9dp"-->
-                    <!--android:src="@mipmap/steward_delete_black" />-->
+                <TextView
+                    android:background="@drawable/btn_gray_bg"
+                    android:id="@+id/itemtv_ads_edit"
+                    android:textSize="13sp"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
+                    android:textColor="@color/textBlack"
+                    android:gravity="center_vertical"
+                    android:text="编辑"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:background="@drawable/btn_gray_bg"
+                    android:id="@+id/itemtv_ads_delet"
+                    android:layout_marginLeft="15dp"
+                    android:textSize="13sp"
+                    android:paddingRight="15dp"
+                    android:paddingLeft="15dp"
+                    android:textColor="@color/textBlack"
+                    android:gravity="center_vertical"
+                    android:text="删除"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
             </LinearLayout>
         </RelativeLayout>
     </LinearLayout>
